--- a/admin.html
+++ b/admin.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>후추 관리자</title>
   <!-- 최소 헤더: CSS + admin.js 만 -->
-  <link rel="stylesheet" href="./styles.css?v=20251112-c1"/>
+  <link rel="stylesheet" href="/assets/styles.css?v=20251112-fix2"/>
   <script src="./admin.js?v=20251112-b1" defer></script>
 
   <style>
@@ -115,3 +115,4 @@
   </div>
 </body>
 </html>
+
