--- a/products/지분대출/빌라-다세대-연립/index.html
+++ b/products/지분대출/빌라-다세대-연립/index.html
@@ -4,7 +4,7 @@
   <!-- 공통 기본 -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="/assets/styles.css?v=20251112-fix2"/>
 
   <!-- 페이지 전용: Title/Meta/OG/Canonical -->
   <title>빌라 지분대출(다세대/연립) | 개인정보 입력 없이 한도·금리 계산 – 후추 대출계산기</title>
