--- a/index.html
+++ b/index.html
@@ -38,28 +38,24 @@
 
           <!-- 상품 -->
           <li class="has-sub">
-            <button class="menu-group" aria-expanded="false">상품</button>
-            <ul class="sub">
-              <li><strong style="display:block;padding:6px 10px;color:#0b2a66;">담보대출</strong></li>
-              <li><a href="/products/담보대출/아파트/">아파트 담보대출</a></li>
-              <li><a href="/products/담보대출/다세대-연립/">다세대/연립 담보대출</a></li>
-              <li><a href="/products/담보대출/단독-다가구/">단독/다가구 담보대출</a></li>
+            <button class라/연립 담보대출</a></li>
+              <li><a href="/products/담보대출/단독주택/">단독주택 담보대출</a></li>
               <li><a href="/products/담보대출/토지-임야/">토지/임야 담보대출</a></li>
 
               <li><hr style="border:none;border-top:1px dashed #e2e8f0;margin:8px 0"/></li>
 
               <li><strong style="display:block;padding:6px 10px;color:#0b2a66;">지분대출</strong></li>
               <li><a href="/products/지분대출/아파트/">아파트 지분대출</a></li>
-              <li><a href="/products/지분대출/빌라-다세대-연립/">다세대/연립 지분대출</a></li>
-              <li><a href="/products/지분대출/단독-다가구/">단독/다가구 지분대출</a></li>
+              <li><a href="/products/지분대출/빌라-다세대-연립/">빌라/연립 지분대출</a></li>
+              <li><a href="/products/지분대출/단독주택/">단독주택 지분대출</a></li>
               <li><a href="/products/지분대출/토지-임야/">토지/임야 지분대출</a></li>
 
               <li><hr style="border:none;border-top:1px dashed #e2e8f0;margin:8px 0"/></li>
 
               <li><strong style="display:block;padding:6px 10px;color:#0b2a66;">경락잔금대출</strong></li>
               <li><a href="/products/경락잔금대출/아파트/">아파트 경락잔금대출</a></li>
-              <li><a href="/products/경락잔금대출/다세대-연립/">다세대/연립 경락잔금대출</a></li>
-              <li><a href="/products/경락잔금대출/단독-다가구/">단독/다가구 경락잔금대출</a></li>
+              <li><a href="/products/경락잔금대출/빌라-다세대-연립/">빌라/연립 경락잔금대출</a></li>
+              <li><a href="/products/경락잔금대출/단독주택/">단독/단독주택 경락잔금대출</a></li>
               <li><a href="/products/경락잔금대출/토지-임야/">토지/임야 경락잔금대출</a></li>
             </ul>
           </li>
@@ -209,3 +205,4 @@
   </div>
 </body>
 </html>
+
