--- a/admin.html
+++ b/admin.html
@@ -6,7 +6,9 @@
   <title>후추 관리자</title>
   <!-- 최소 헤더: CSS + admin.js 만 -->
   <link rel="stylesheet" href="/assets/styles.css?v=20251112-fix2"/>
-  <script src="./admin.js?v=20251112-b1" defer></script>
+  <script src="/assets/shared.js?v=20251113-split" defer></script>
+  <script src="/assets/admin.js?v=20251113-split" defer></script>
+
 
   <style>
     /* 관리자 전용 약간의 레이아웃 보강 */
@@ -115,4 +117,5 @@
   </div>
 </body>
 </html>
+
 
