--- a/calculator.html
+++ b/calculator.html
@@ -8,6 +8,9 @@
 
   <!-- 공용 스타일 (루트 기준 절대경로) -->
   <link rel="stylesheet" href="/assets/styles.css?v=20251112-fix2"/>
+  <script src="/assets/shared.js?v=20251113-split" defer></script>
+  <script src="/assets/calculator.js?v=20251113-split" defer></script>
+
 
   <!-- 공용 유틸 + 계산기 전용 -->
   <script src="/assets/shared.js?v=20251113-split" defer></script>
@@ -214,3 +217,4 @@
   </div>
 </body>
 </html>
+
