--- a/calculator.html
+++ b/calculator.html
@@ -4,15 +4,18 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>후추 | 온투업(P2P) 담보대출 계산기</title>
-  <meta name="description" content="개인정보 수집 없이, 실제 사례 기반 계산으로 담보대출 가능 금액과 비용을 가늠해보세요.">
+  <meta name="description" content="개인정보 입력 없이 실제 사례 기반으로 한도·금리를 미리 계산하세요.">
 
-  <!-- 공용 스타일 (루트 기준 절대경로) -->
+  <!-- ✅ 공용 스타일: 절대경로 -->
   <link rel="stylesheet" href="/assets/styles.css?v=20251112-fix2"/>
- 
-  <!-- 공용 유틸 + 계산기 전용 -->
+
+  <!-- ✅ 공용 유틸(네비 드롭다운, 로고, 스토어 키 포함) -->
   <script src="/assets/shared.js?v=20251113-split" defer></script>
+
+  <!-- ✅ 계산기 전용 스크립트 -->
   <script src="/assets/calculator.js?v=20251113-split" defer></script>
 </head>
+
 <body>
 
   <!-- Header -->
@@ -214,5 +217,6 @@
   </div>
 </body>
 </html>
+
 
 
