--- a/products/담보대출/단독주택/index.html
+++ b/products/담보대출/단독주택/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="/assets/styles.css?v=20251112-fix2"/>
+  <script src="/assets/shared.js?v=20251113-split" defer></script>
 
   <title>단독주택 지분대출 | 개인정보 입력 없이 한도·금리 계산 – 후추 대출계산기</title>
   <meta name="description" content="공동소유 지분율, 선순위 대출, 보증금을 모두 반영해 실제 온투업 취급 사례를 기준으로 한도와 예상 금리를 안내합니다. 개인정보 입력 없이 바로 계산해 볼 수 있으며, 대출 가능 시 조건에 맞는 온투업사의 대출 담당자를 안내해 드립니다. 직접 온투업사 대출 담당자와 상담을 통해 최종 대출 가능 여부와 구체적인 조건을 확인해 주세요.">
