--- a/calculator.html
+++ b/calculator.html
@@ -4,24 +4,24 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>후추 | 온투업(P2P) 담보대출 계산기</title>
-  <meta name="description" content="온투업 실제 사례 기반 담보대출 계산기">
+  <meta name="description" content="온투업 실제 사례 기반 담보대출 계산기. 개인정보 수집 없이 가능 금액/이자/수수료를 가늠해 보세요.">
 
+  <!-- 공용 스타일 -->
   <link rel="stylesheet" href="/assets/styles.css?v=20251112-fix2"/>
 
-  <!-- 공용 유틸 + 계산기 전용 (ES Modules) -->
-  <script type="module" src="/assets/shared.js?v=20251113-split"></script>
-  <script type="module" src="/assets/calculator.js?v=20251113-split"></script>
+  <!-- 계산기 전용 스크립트 (ES Module) -->
+  <script type="module" src="/assets/calculator.js?v=20251113-split" defer></script>
 </head>
 <body>
 
-  <!-- Header -->
+  <!-- Header (index와 동일 구조) -->
   <header class="huchu-header" role="banner">
     <div class="huchu-header__inner">
       <a href="/index.html" class="huchu-logo" aria-label="후추 Huchu 홈">
-        <img id="siteLogo" class="logo-img" src="/assets/logo/huchu-logo.png"
-             srcset="/assets/logo/huchu-logo.png 1x, /assets/logo/huchu-logo@2x.png 2x"
-             alt="후추 로고"/>
-        <span id="logoFallback" class="logo-fallback"><span class="logo-mark">%</span><span class="logo-text">후추 Huchu</span></span>
+        <img id="siteLogo" class="logo-img" src="/assets/logo/huchu-logo.png" alt="후추 로고"/>
+        <span id="logoFallback" class="logo-fallback">
+          <span class="logo-mark">%</span><span class="logo-text">후추 Huchu</span>
+        </span>
       </a>
 
       <button class="nav-toggle" aria-expanded="false" aria-controls="siteNav" aria-label="메뉴 열기">
@@ -39,20 +39,23 @@
             <ul class="sub">
               <li><strong style="display:block;padding:6px 10px;color:#0b2a66;">담보대출</strong></li>
               <li><a href="/products/담보대출/아파트/">아파트 담보대출</a></li>
-              <li><a href="/products/담보대출/다세대-연립/">다세대/연립 담보대출</a></li>
-              <li><a href="/products/담보대출/단독-다가구/">단독/다가구 담보대출</a></li>
+              <li><a href="/products/담보대출/빌라-다세대-연립/">빌라/연립 담보대출</a></li>
+              <li><a href="/products/담보대출/단독주택/">단독주택 담보대출</a></li>
               <li><a href="/products/담보대출/토지-임야/">토지/임야 담보대출</a></li>
               <li><hr style="border:none;border-top:1px dashed #e2e8f0;margin:8px 0"/></li>
+
               <li><strong style="display:block;padding:6px 10px;color:#0b2a66;">지분대출</strong></li>
               <li><a href="/products/지분대출/아파트/">아파트 지분대출</a></li>
-              <li><a href="/products/지분대출/빌라-다세대-연립/">다세대/연립 지분대출</a></li>
-              <li><a href="/products/지분대출/단독-다가구/">단독/다가구 지분대출</a></li>
+              <li><a href="/products/지분대출/빌라-다세대-연립/">빌라/연립 지분대출</a></li>
+              <li><a href="/products/지분대출/단독주택/">단독주택 지분대출</a></li>
               <li><a href="/products/지분대출/토지-임야/">토지/임야 지분대출</a></li>
+
               <li><hr style="border:none;border-top:1px dashed #e2e8f0;margin:8px 0"/></li>
+
               <li><strong style="display:block;padding:6px 10px;color:#0b2a66;">경락잔금대출</strong></li>
               <li><a href="/products/경락잔금대출/아파트/">아파트 경락잔금대출</a></li>
-              <li><a href="/products/경락잔금대출/다세대-연립/">다세대/연립 경락잔금대출</a></li>
-              <li><a href="/products/경락잔금대출/단독-다가구/">단독/다가구 경락잔금대출</a></li>
+              <li><a href="/products/경락잔금대출/빌라-다세대-연립/">빌라/연립 경락잔금대출</a></li>
+              <li><a href="/products/경락잔금대출/단독주택/">단독주택 경락잔금대출</a></li>
               <li><a href="/products/경락잔금대출/토지-임야/">토지/임야 경락잔금대출</a></li>
             </ul>
           </li>
@@ -71,7 +74,7 @@
     </div>
   </header>
 
-  <!-- 금일 이용자수 & 타입칩 -->
+  <!-- (계산기 본문은 기존 calculator.html의 본문 그대로 유지) -->
   <div class="top-stats" aria-label="금일 이용자수">
     <div class="stat-card">
       <div class="stat-label"><span class="stat-dot"></span>금일 이용자수</div>
@@ -123,7 +126,7 @@
         </div>
         <p class="info">
           *아파트는 KB시세를 입력하세요 →
-          <a href="https://kbland.kr/search" target="_blank">[KB시세 바로가기]</a><br>
+          <a href="https://kbland.kr/search" target="_blank" rel="noopener">[KB시세 바로가기]</a><br>
           (3층 이상: 일반가 / 2층 이하: 하위평균가)
         </p>
       </div>
@@ -206,12 +209,11 @@
       </div>
     </div>
   </footer>
-
-  <!-- Footer bar -->
   <div class="huchu-footer__bar">
     <small><span id="copyrightYear">2025</span> © Huchu. All rights reserved.</small>
   </div>
+
+  <!-- 공용 스크립트(네비/로고 등) -->
+  <script src="/assets/shared.js?v=20251113-split" defer></script>
 </body>
 </html>
-
-
