--- a/products/경락잔금대출/아파트/index.html
+++ b/products/경락잔금대출/아파트/index.html
@@ -56,6 +56,7 @@
   </style>
 </head>
 <body>
+  <script src="/assets/layout.js" defer></script>
   <main class="product-page product-share-loan">
     <header class="page-hero">
       <h1>아파트 지분대출</h1>
