--- a/products/지분대출/단독주택/index.html
+++ b/products/지분대출/단독주택/index.html
@@ -53,6 +53,7 @@
   </style>
 </head>
 <body>
+  <script src="/assets/layout.js" defer></script>
   <main class="product-page product-share-loan">
     <header class="page-hero">
       <h1>단독주택 지분대출</h1>
