--- a/products/지분대출/빌라-다세대-연립/index.html
+++ b/products/지분대출/빌라-다세대-연립/index.html
@@ -73,6 +73,7 @@
   </style>
 </head>
 <body>
+  <script src="/assets/layout.js" defer></script>
   <!-- 공통 헤더/네비게이션이 있다면 여기 -->
   <!-- <header>...</header> -->
 
