--- a/index.html
+++ b/index.html
@@ -1,63 +1,13 @@
 <!DOCTYPE html>
 <html lang="ko">
-<!-- Header -->
-<header class="huchu-header" role="banner">
-  <div class="huchu-header__inner">
-    <a href="/index.html" class="huchu-logo" aria-label="후추 Huchu 홈">
-      <img id="siteLogo" class="logo-img" src="/assets/logo/huchu-logo.png" alt="후추 로고"/>
-      <span id="logoFallback" class="logo-fallback"><span class="logo-mark">%</span><span class="logo-text">후추 Huchu</span></span>
-    </a>
-
-    <button class="nav-toggle" aria-expanded="false" aria-controls="siteNav" aria-label="메뉴 열기">
-      <span class="nav-toggle__bar"></span><span class="nav-toggle__bar"></span><span class="nav-toggle__bar"></span>
-    </button>
-
-    <nav id="siteNav" class="nav-menu" aria-label="주요 메뉴">
-      <ul>
-        <li><a href="/index.html">홈</a></li>
-        <li><a href="/calculator.html" aria-current="page">계산기</a></li>
-
-        <!-- 대출상품 -->
-        <li class="has-sub">
-          <button class="menu-group" aria-expanded="false">대출상품</button>
-          <ul class="sub">
-            <li><strong style="display:block;padding:6px 10px;color:#0b2a66;">담보대출</strong></li>
-            <li><a href="/products/담보대출/아파트/">아파트 담보대출</a></li>
-            <li><a href="/products/담보대출/빌라-다세대-연립/">빌라/연립 담보대출</a></li>
-            <li><a href="/products/담보대출/단독주택/">단독주택 담보대출</a></li>
-            <li><a href="/products/담보대출/토지-임야/">토지/임야 담보대출</a></li>
-
-            <li><hr style="border:none;border-top:1px dashed #e2e8f0;margin:8px 0"/></li>
-
-            <li><strong style="display:block;padding:6px 10px;color:#0b2a66;">지분대출</strong></li>
-            <li><a href="/products/지분대출/아파트/">아파트 지분대출</a></li>
-            <li><a href="/products/지분대출/빌라-다세대-연립/">빌라/연립 지분대출</a></li>
-            <li><a href="/products/지분대출/단독주택/">단독주택 지분대출</a></li>
-            <li><a href="/products/지분대출/토지-임야/">토지/임야 지분대출</a></li>
-
-            <li><hr style="border:none;border-top:1px dashed #e2e8f0;margin:8px 0"/></li>
-
-            <li><strong style="display:block;padding:6px 10px;color:#0b2a66;">경락잔금대출</strong></li>
-            <li><a href="/products/경락잔금대출/아파트/">아파트 경락잔금대출</a></li>
-            <li><a href="/products/경락잔금대출/빌라-다세대-연립/">빌라/연립 경락잔금대출</a></li>
-            <li><a href="/products/경락잔금대출/단독주택/">단독주택 경락잔금대출</a></li>
-            <li><a href="/products/경락잔금대출/토지-임야/">토지/임야 경락잔금대출</a></li>
-          </ul>
-        </li>
-
-        <!-- 안내사항 -->
-        <li class="has-sub">
-          <button class="menu-group" aria-expanded="false">안내사항</button>
-          <ul class="sub">
-            <li><a href="/index.html#notices">공지사항</a></li>
-            <li><a href="/index.html#faq">자주묻는질문</a></li>
-            <li><a href="/index.html#methodology">근거/프라이버시</a></li>
-          </ul>
-        </li>
-      </ul>
-    </nav>
-  </div>
-</header>
+<head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>후추 | 온투업(P2P) 담보대출 계산기</title>
+  <meta name="description" content="개인정보 수집 없이, 실제 사례 기반 계산으로 온투업 담보대출 가능성을 가늠해보세요.">
+  <link rel="stylesheet" href="/assets/styles.css?v=20251114-calc-only"/>
+  <script type="module" src="/assets/calculator.js?v=20251114-calc-only"></script>
+</head>
 <body>
 
   <!-- Header (로고만) -->
@@ -198,4 +148,3 @@
   </div>
 </body>
 </html>
-
