--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
   <footer class="huchu-footer" role="contentinfo">
     <div class="huchu-footer__inner">
       <div class="f-col">
-        <div class="f-brand">후추 Huchu</div>
-        <p class="f-mission">개인정보 없이, 실제 사례 기반 계산으로 합리적인 대출기관 선택을 돕습니다.</p>
+        <div class="f-brand"> <img class="logo-img" src="/assets/logo/huchu-logo.png" alt="후추 로고"/>
+        <p class="f-mission">개인정보 입력 없이, 실제 사례 기반 계산으로 합리적인 대출기관 선택을 돕습니다.</p>
       </div>
     </div>
   </footer>
@@ -148,3 +148,4 @@
   </div>
 </body>
 </html>
+
