--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <footer class="huchu-footer" role="contentinfo">
     <div class="huchu-footer__inner">
       <div class="f-col">
-        <div class="f-brand"> <img class="logo-img" src="/assets/logo/huchu-logo.png" alt="후추 로고"/>
+        <div class="f-brand">
         <p class="f-mission">개인정보 입력 없이, 실제 사례 기반 계산으로 합리적인 대출기관 선택을 돕습니다.</p>
       </div>
     </div>
@@ -148,4 +148,5 @@
   </div>
 </body>
 </html>
+
 
