--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
       </div>
 
       <div class="step">
-        <label class="steplabel no-badge-before">
-          (선택사항) <span class="badge-inline">4</span>금액중 상환+반환할 금액
+        <label class="steplabel no-badge-before">(선택사항)금액중 상환+반환할 금액
         </label>
         <div class="amount-row">
           <input type="text" id="deduction" value="0">
@@ -148,5 +147,6 @@
   </div>
 </body>
 </html>
+
 
 
